# TestZemoga

./: README.md
TestZemogaApp_/: CMakeLists.txt
TestZemogaApp_/app/: CMakeLists.txt  app.cpp
TestZemogaApp_/bmp/: CMakeLists.txt
TestZemogaApp_/bmp/inc/: bmp.h
TestZemogaApp_/bmp/src/: bmp.cpp
TestZemogaTests_/: CMakeLists.txt
TestZemogaTests_/inc/: BMP.h
TestZemogaTests_/src/: main.cpp
